Fixed z-index

--- a/src/components/UI/Navbar.module.css
+++ b/src/components/UI/Navbar.module.css
@@ -6,7 +6,7 @@ nav {
   justify-content: flex-start;
   max-width: 2100px;
   margin: 0 auto !important;
-  z-index: 20;
+  z-index: 10;
   width: 100vw !important;
 }
 
